Fixed contacts content on mobile

--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -1,9 +1,15 @@
 .contacts {
   &__content {
+    max-width: 411px;
+    margin: 0 auto;
+
     @include onTablet {
       display: flex;
       gap: 24px;
+
+      max-width: 100%;
     }
+
     @include onDesktop {
       gap: 198px;
     }
@@ -15,8 +21,8 @@
     }
   }
   &__form {
-    max-width: 411px;
-    margin: 0 auto 48px;
+
+    margin-bottom: 48px;
 
     @include onTablet {
       flex-basis: 50%;
